grammar/CyamixParser.py
# Generated from Cyamix.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CyamixParser ( Parser ):

    grammarFileName = "Cyamix.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'if'", "'else'", "'while'", "'do'", 
                     "'for'", "'printf'", "'scanf'", "'||'", "'&&'", "'=='", 
                     "'!='", "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", 
                     "'*'", "'/'", "'\\u00C3\\u00B7'", "'!'", "'int'", "'float'", 
                     "'char'", "'boolean'", "'program'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'&'", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "PROGRAM", 
                      "ID", "INT_LITERAL", "FLOAT_LITERAL", "CHAR_LITERAL", 
                      "BOOL_LITERAL", "STRING_LITERAL", "AMPERSAND", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "SEMI", "COMMA", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_topDecl = 1
    RULE_varDecl = 2
    RULE_varItem = 3
    RULE_statement = 4
    RULE_block = 5
    RULE_ifStmt = 6
    RULE_whileStmt = 7
    RULE_doWhileStmt = 8
    RULE_forStmt = 9
    RULE_forInit = 10
    RULE_forUpdate = 11
    RULE_assignment = 12
    RULE_assignmentNoSemi = 13
    RULE_varDeclNoSemi = 14
    RULE_funcCall = 15
    RULE_argList = 16
    RULE_arg = 17
    RULE_expr = 18
    RULE_logicalOrExpr = 19
    RULE_logicalAndExpr = 20
    RULE_equalityExpr = 21
    RULE_relationalExpr = 22
    RULE_additiveExpr = 23
    RULE_multiplicativeExpr = 24
    RULE_unaryExpr = 25
    RULE_primary = 26
    RULE_type = 27

    ruleNames =  [ "program", "topDecl", "varDecl", "varItem", "statement", 
                   "block", "ifStmt", "whileStmt", "doWhileStmt", "forStmt", 
                   "forInit", "forUpdate", "assignment", "assignmentNoSemi", 
                   "varDeclNoSemi", "funcCall", "argList", "arg", "expr", 
                   "logicalOrExpr", "logicalAndExpr", "equalityExpr", "relationalExpr", 
                   "additiveExpr", "multiplicativeExpr", "unaryExpr", "primary", 
                   "type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    PROGRAM=27
    ID=28
    INT_LITERAL=29
    FLOAT_LITERAL=30
    CHAR_LITERAL=31
    BOOL_LITERAL=32
    STRING_LITERAL=33
    AMPERSAND=34
    LPAREN=35
    RPAREN=36
    LBRACE=37
    RBRACE=38
    LBRACK=39
    RBRACK=40
    SEMI=41
    COMMA=42
    LINE_COMMENT=43
    BLOCK_COMMENT=44
    WS=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(CyamixParser.PROGRAM, 0)

        def LPAREN(self):
            return self.getToken(CyamixParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CyamixParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(CyamixParser.BlockContext,0)


        def EOF(self):
            return self.getToken(CyamixParser.EOF, 0)

        def getRuleIndex(self):
            return CyamixParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CyamixParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(CyamixParser.PROGRAM)
            self.state = 57
            self.match(CyamixParser.LPAREN)
            self.state = 58
            self.match(CyamixParser.RPAREN)
            self.state = 59
            self.block()
            self.state = 60
            self.match(CyamixParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(CyamixParser.VarDeclContext,0)


        def getRuleIndex(self):
            return CyamixParser.RULE_topDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopDecl" ):
                listener.enterTopDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopDecl" ):
                listener.exitTopDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopDecl" ):
                return visitor.visitTopDecl(self)
            else:
                return visitor.visitChildren(self)




    def topDecl(self):

        localctx = CyamixParser.TopDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.varDecl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(CyamixParser.TypeContext,0)


        def varItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyamixParser.VarItemContext)
            else:
                return self.getTypedRuleContext(CyamixParser.VarItemContext,i)


        def SEMI(self):
            return self.getToken(CyamixParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CyamixParser.COMMA)
            else:
                return self.getToken(CyamixParser.COMMA, i)

        def getRuleIndex(self):
            return CyamixParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = CyamixParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.type_()
            self.state = 65
            self.varItem()
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==42:
                self.state = 66
                self.match(CyamixParser.COMMA)
                self.state = 67
                self.varItem()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self.match(CyamixParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CyamixParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(CyamixParser.ExprContext,0)


        def getRuleIndex(self):
            return CyamixParser.RULE_varItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarItem" ):
                listener.enterVarItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarItem" ):
                listener.exitVarItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarItem" ):
                return visitor.visitVarItem(self)
            else:
                return visitor.visitChildren(self)




    def varItem(self):

        localctx = CyamixParser.VarItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varItem)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(CyamixParser.ID)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 76
                self.match(CyamixParser.T__0)
                self.state = 77
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(CyamixParser.BlockContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(CyamixParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(CyamixParser.WhileStmtContext,0)


        def doWhileStmt(self):
            return self.getTypedRuleContext(CyamixParser.DoWhileStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(CyamixParser.ForStmtContext,0)


        def assignment(self):
            return self.getTypedRuleContext(CyamixParser.AssignmentContext,0)


        def funcCall(self):
            return self.getTypedRuleContext(CyamixParser.FuncCallContext,0)


        def SEMI(self):
            return self.getToken(CyamixParser.SEMI, 0)

        def getRuleIndex(self):
            return CyamixParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = CyamixParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.ifStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.whileStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.doWhileStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                self.forStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 85
                self.assignment()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 86
                self.funcCall()
                self.state = 87
                self.match(CyamixParser.SEMI)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 89
                self.match(CyamixParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(CyamixParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CyamixParser.RBRACE, 0)

        def topDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyamixParser.TopDeclContext)
            else:
                return self.getTypedRuleContext(CyamixParser.TopDeclContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyamixParser.StatementContext)
            else:
                return self.getTypedRuleContext(CyamixParser.StatementContext,i)


        def getRuleIndex(self):
            return CyamixParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = CyamixParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(CyamixParser.LBRACE)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2336856474100) != 0):
                self.state = 95
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [23, 24, 25, 26]:
                    self.state = 93
                    self.topDecl()
                    pass
                elif token in [2, 4, 5, 6, 7, 8, 28, 37, 41]:
                    self.state = 94
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.match(CyamixParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(CyamixParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(CyamixParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(CyamixParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyamixParser.StatementContext)
            else:
                return self.getTypedRuleContext(CyamixParser.StatementContext,i)


        def getRuleIndex(self):
            return CyamixParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = CyamixParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(CyamixParser.T__1)
            self.state = 103
            self.match(CyamixParser.LPAREN)
            self.state = 104
            self.expr()
            self.state = 105
            self.match(CyamixParser.RPAREN)
            self.state = 106
            self.statement()
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 107
                self.match(CyamixParser.T__2)
                self.state = 108
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(CyamixParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(CyamixParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(CyamixParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(CyamixParser.StatementContext,0)


        def getRuleIndex(self):
            return CyamixParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = CyamixParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(CyamixParser.T__3)
            self.state = 112
            self.match(CyamixParser.LPAREN)
            self.state = 113
            self.expr()
            self.state = 114
            self.match(CyamixParser.RPAREN)
            self.state = 115
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoWhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(CyamixParser.StatementContext,0)


        def LPAREN(self):
            return self.getToken(CyamixParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(CyamixParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(CyamixParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(CyamixParser.SEMI, 0)

        def getRuleIndex(self):
            return CyamixParser.RULE_doWhileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhileStmt" ):
                listener.enterDoWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhileStmt" ):
                listener.exitDoWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoWhileStmt" ):
                return visitor.visitDoWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def doWhileStmt(self):

        localctx = CyamixParser.DoWhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_doWhileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(CyamixParser.T__4)
            self.state = 118
            self.statement()
            self.state = 119
            self.match(CyamixParser.T__3)
            self.state = 120
            self.match(CyamixParser.LPAREN)
            self.state = 121
            self.expr()
            self.state = 122
            self.match(CyamixParser.RPAREN)
            self.state = 123
            self.match(CyamixParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(CyamixParser.LPAREN, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(CyamixParser.SEMI)
            else:
                return self.getToken(CyamixParser.SEMI, i)

        def RPAREN(self):
            return self.getToken(CyamixParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(CyamixParser.StatementContext,0)


        def forInit(self):
            return self.getTypedRuleContext(CyamixParser.ForInitContext,0)


        def expr(self):
            return self.getTypedRuleContext(CyamixParser.ExprContext,0)


        def forUpdate(self):
            return self.getTypedRuleContext(CyamixParser.ForUpdateContext,0)


        def getRuleIndex(self):
            return CyamixParser.RULE_forStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStmt" ):
                return visitor.visitForStmt(self)
            else:
                return visitor.visitChildren(self)




    def forStmt(self):

        localctx = CyamixParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_forStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(CyamixParser.T__5)
            self.state = 126
            self.match(CyamixParser.LPAREN)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 394264576) != 0):
                self.state = 127
                self.forInit()


            self.state = 130
            self.match(CyamixParser.SEMI)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 51275759616) != 0):
                self.state = 131
                self.expr()


            self.state = 134
            self.match(CyamixParser.SEMI)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 135
                self.forUpdate()


            self.state = 138
            self.match(CyamixParser.RPAREN)
            self.state = 139
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForInitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclNoSemi(self):
            return self.getTypedRuleContext(CyamixParser.VarDeclNoSemiContext,0)


        def assignmentNoSemi(self):
            return self.getTypedRuleContext(CyamixParser.AssignmentNoSemiContext,0)


        def getRuleIndex(self):
            return CyamixParser.RULE_forInit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForInit" ):
                listener.enterForInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForInit" ):
                listener.exitForInit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForInit" ):
                return visitor.visitForInit(self)
            else:
                return visitor.visitChildren(self)




    def forInit(self):

        localctx = CyamixParser.ForInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_forInit)
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23, 24, 25, 26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.varDeclNoSemi()
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.assignmentNoSemi()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForUpdateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentNoSemi(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyamixParser.AssignmentNoSemiContext)
            else:
                return self.getTypedRuleContext(CyamixParser.AssignmentNoSemiContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CyamixParser.COMMA)
            else:
                return self.getToken(CyamixParser.COMMA, i)

        def getRuleIndex(self):
            return CyamixParser.RULE_forUpdate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForUpdate" ):
                listener.enterForUpdate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForUpdate" ):
                listener.exitForUpdate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForUpdate" ):
                return visitor.visitForUpdate(self)
            else:
                return visitor.visitChildren(self)




    def forUpdate(self):

        localctx = CyamixParser.ForUpdateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_forUpdate)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.assignmentNoSemi()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==42:
                self.state = 146
                self.match(CyamixParser.COMMA)
                self.state = 147
                self.assignmentNoSemi()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'
